--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -6,5 +6,7 @@
 @import 'base/icons', 'base/states', 'base/util', 'base/reset', 'base/form';
 // @import "base/fonts"
 
+@import 'shared/index';
+
 // Base Files
 @import 'base/globals';
