--- a/app/assets/css/base/_variables.scss
+++ b/app/assets/css/base/_variables.scss
@@ -7,6 +7,7 @@ $space-lg: $space * 8;
 $space-xl: $space * 16;
 
 $space-size: (
+  0: 0,
   1: $space-xs,
   2: $space-sm,
   3: $space-md,
@@ -63,11 +64,11 @@ $font-weight-normal: 400;
 $font-weight-semibold: 600;
 $font-weight-bold: 700;
 $font-weight-black: 800;
-$font-size-xs: 0.625rem; // 10px
-$font-size-s: 0.8rem; // 12.8px
-$font-size-m: 1rem; // [16px]
-$font-size-l: 1.25rem; // 20px
-$font-size-xl: 1.5rem; // 24px
+$font-size-xs: 0.625rem;
+$font-size-s: 0.8rem;
+$font-size-m: 1rem;
+$font-size-l: 1.4rem;
+$font-size-xl: 1.7rem;
 
 // Medias
 $media-screen-xxs: 22.5em; // 360px
