--- a/app/assets/css/base/_globals.scss
+++ b/app/assets/css/base/_globals.scss
@@ -18,16 +18,18 @@ h4,
 h5,
 h6,
 p {
-  margin: 0.5em 0;
   line-height: 1.4;
 }
-
+p {
+  margin: 0.5em 0;
+}
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
+  margin: 0.8em 0 0.4em;
   font-weight: bold;
 }
 h1 {
