--- a/app/assets/css/components/footer.scss
+++ b/app/assets/css/components/footer.scss
@@ -217,11 +217,18 @@
       background-image: url("~/assets/images/social/instagram-c.png");
       }  
     } 
-  &__details-item {
-    display: inline-block;
-    padding: 20px 10px 0;
+  &__details {
+    padding-top: 20px;
     @media(max-width: 991px) {
-      padding: 5px 0 0 0;
+      padding-top: 5px;
+    }
+  }  
+  &__details-item {
+    padding: 0 10px;
+    display: inline-block;
+    margin-bottom: 0;
+    &:first-child {
+      padding-left: 0;
     }
   }  
 }
