--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -3,7 +3,7 @@
 @import 'vendor/bootstrap.min';
 
 // Base Helpers
-@import 'base/icons', 'base/states', 'base/util', 'base/reset', 'base/form';
+@import 'base/icons', 'base/states', 'base/util', 'base/reset', 'base/checkbox';
 // @import "base/fonts"
 
 @import 'shared/index';
