--- a/app/assets/css/shared/_form-calculate.scss
+++ b/app/assets/css/shared/_form-calculate.scss
@@ -1,26 +1,76 @@
 .callback-cost {
-  margin-bottom: 20px;
+  margin: 20px 0;
   &-wr {
     background-color: rgba(240, 240, 240, 0.5);
     border-radius: 20px;
     padding: 35px 95px 35px 95px;
+    @media(max-width: 991px) {
+      padding: 35px;
+    }
   }
-  h2 {
+  &__none2 {
+    display: none;
+    @media(max-width: 715px) {
+      display: block;
+      margin-bottom: 20px;
+    }
+  }  
+  &__none1 {
+    display: block;
+    @media(max-width: 715px) {
+      display: none;
+    }
+  }
+  h3 {
     text-align: center;
     font-size: 24px;
     margin-bottom: 40px;
     font-weight: 700;
     color: #00bce9;
   }
+  &__left {
+    width: 51%;
+    vertical-align: top;
+    @media(max-width: 715px) {
+      width: 100%
+    }
+  }
+  &__right {
+    width: 49%;
+    @media(max-width: 715px) {
+      width: 100%
+    }
+  }
+  &__left,
+  &__right {
+    display: inline-block;
+  }
   input {
+    margin-right: 7px;
+    margin-bottom: 15px;
+    border-width: 1px;
+    border-color: #e8e8e8;
+    border-style: solid;
+    width: 90%;
+    height: 40px;
+    border-radius: 50px;
+    padding: 20px;
+    &:focus {
+      outline: none;
+    }
+    @media(max-width: 715px) {
+      width: 100%;
+    }
+  }  
+  textarea {
     margin-right: 7px;
     margin-bottom: 5px;
     border-width: 1px;
     border-color: #e8e8e8;
     border-style: solid;
-    width: 234px;
-    height: 40px;
-    border-radius: 50px;
+    width: 100%;
+    height: 95px;
+    border-radius: 15px;
     padding: 20px;
     &:focus {
       outline: none;
@@ -37,58 +87,8 @@
     border-radius: 50px;
     color: white;
   }
-  .process {
-    margin-bottom: 65px;
-    width: 100%;
-    display: block;
-    .checked {
-      vertical-align: middle;
-      display: inline-block;
-      position: relative;
-      border: #00c6e6 1px solid;
-      width: 20px;
-      height: 20px;
-      margin-right: 15px;
-      transition: all 300ms ease;
-      &:after {
-        content: '';
-        opacity: 0;
-        border-right: #a0cc00 4px solid;
-        position: absolute;
-        width: 10px;
-        height: 20px;
-        top: 1px;
-        right: -4px;
-        transform: rotate(30deg);
-        border-radius: 30%;
-        background-color: #fff;
-        transition: all 300ms ease;
-      }
-      &:before {
-        content: '';
-        border-right: #a0cc00 4px solid;
-        position: absolute;
-        opacity: 0;
-        width: 7px;
-        height: 11px;
-        bottom: -4px;
-        right: 3px;
-        transform: rotate(-30deg);
-        border-radius: 30%;
-        z-index: 1;
-        background-color: #fff;
-        transition: all 300ms ease;
-      }
-      &-text {
-        display: inline-block;
-        font-size: 12px;
-        font-family: 'Proxima Nova Thin';
-        color: #4b4b4b;
-      }
-    }
+  
     input {
-      display: none;
-
       &:checked {
         + .checked {
           border-color: #a0cc00;
@@ -101,5 +101,4 @@
         }
       }
     }
-  }
 }
