--- a/app/assets/css/shared/_form-callback.scss
+++ b/app/assets/css/shared/_form-callback.scss
@@ -1,12 +1,15 @@
-.callback {
-  h2 {
+.form {
+  margin-bottom: 40px;
+  @media(max-width: 745px) {
+    text-align: center;
+  }
+  p {
     font-size: 18px;
-    margin-bottom: 20px;
     font-weight: 300;
     color: #666666;
   }
-  input {
-    margin-right: 7px;
+  &__input {
+    margin-right: 20px;
     margin-bottom: 5px;
     border-width: 1px;
     border-color: #e8e8e8;
@@ -18,11 +21,13 @@
     &:focus {
       outline: none;
     }
+    @media(max-width: 745px) {
+      margin-right: 0;
+    }
   }
   button {
     display: inline-block;
-    margin-left: 15px;
-    background-color: #00ceff;
+    background-color: $color-blue;
     border: none;
     box-shadow: 0px 4px 10px 0px rgba(34, 34, 34, 0.1);
     width: 190px;
@@ -30,72 +35,8 @@
     border-radius: 50px;
     color: white;
   }
-  .process {
-    margin-bottom: 65px;
-    width: 100%;
-    display: block;
-    .checked {
-      vertical-align: middle;
-      display: inline-block;
-      position: relative;
-      border: #00c6e6 1px solid;
-      width: 20px;
-      height: 20px;
-      margin-right: 15px;
-      transition: all 300ms ease;
-      &:after {
-        content: '';
-        opacity: 0;
-        border-right: #a0cc00 4px solid;
-        position: absolute;
-        width: 10px;
-        height: 20px;
-        top: 1px;
-        right: -4px;
-        transform: rotate(30deg);
-        border-radius: 30%;
-        background-color: #fff;
-        transition: all 300ms ease;
-      }
-      &:before {
-        content: '';
-        border-right: #a0cc00 4px solid;
-        position: absolute;
-        opacity: 0;
-        width: 7px;
-        height: 11px;
-        bottom: -4px;
-        right: 3px;
-        transform: rotate(-30deg);
-        border-radius: 30%;
-        z-index: 1;
-        background-color: #fff;
-        transition: all 300ms ease;
-      }
-      &-text {
-        display: inline-block;
-        font-size: 12px;
-        font-family: 'Proxima Nova Thin';
-        color: #4b4b4b;
-      }
-    }
-    input {
-      display: none;
-
-      &:checked {
-        + .checked {
-          border-color: #a0cc00;
-          &:after {
-            opacity: 1;
-          }
-          &:before {
-            opacity: 1;
-          }
-        }
-      }
-    }
-  }
 }
+
 @media screen and (max-width: 768px) {
   .callback input,
   .callback button {
