--- a/app/assets/css/shared/_index.scss
+++ b/app/assets/css/shared/_index.scss
@@ -1,1 +1,1 @@
-@import 'form-callback', 'form-calculate', 'carousel', 'breadcrumb', 'map', 'slider';
+@import 'form-callback', 'form-calculate', 'carousel', 'breadcrumb', 'map', 'slider', 'panel';
