--- a/app/assets/css/shared/_breadcrumb.scss
+++ b/app/assets/css/shared/_breadcrumb.scss
@@ -1,7 +1,6 @@
 .breadcrumb {
   background-color: #f1f1f1;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 5px 15px 20px;
   margin-bottom: 30px;
   &-link {
     font-size: 12px;
