--- a/app/assets/css/shared/_form-callback.scss
+++ b/app/assets/css/shared/_form-callback.scss
@@ -3,6 +3,11 @@
   @media(max-width: 745px) {
     text-align: center;
   }
+  &__callback {
+    background-color: rgba(240, 240, 240, 0.5);
+    border-radius: 20px;
+    padding: 25px;
+  }
   p {
     font-size: 18px;
     font-weight: 300;
@@ -15,9 +20,9 @@
     border-color: #e8e8e8;
     border-style: solid;
     width: 234px;
-    height: 40px;
     border-radius: 50px;
-    padding: 20px;
+    padding: 12px;
+    height: 14px;
     &:focus {
       outline: none;
     }
