--- a/app/assets/css/shared/_slider.scss
+++ b/app/assets/css/shared/_slider.scss
@@ -4,5 +4,8 @@
   &__item {
     width: 100%;
     height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
