--- a/app/assets/css/base/_checkbox.scss
+++ b/app/assets/css/base/_checkbox.scss
@@ -16,15 +16,15 @@
     &:before,
     &:after {
       position: absolute;
-      content: '';
       top: 50%;
+      transform: translateY(-50%);
     }
 
     &:before {
+      content: '';
       width: 14px;
       height: 14px;
       left: 0;
-      transform: translateY(-50%);
       border: 1px solid $color-grey-dark;
     }
 
@@ -38,25 +38,32 @@
   }
 
   &__input:checked + .checkbox__label:after {
-    position: absolute;
     content: '';
-    margin-top: -1px;
+    top: 50%;
+    margin-top: -2px;
     width: 8px;
     border-color: $color-secondary;
     border-style: solid;
     border-width: 0 0 2px 2px;
     height: 6px;
-    top: 50%;
-    left: 3px;
-    transform: translateY(-50%) rotate(-45deg);
+    left: 7px;
+    transform: rotate(-45deg) translateY(-50%);
   }
 
-  &.-radio {
+  &.-circle {
+    position: relative;
+
     .checkbox__label:before {
       border-radius: 50%;
     }
     .checkbox__label:after {
-      height: 5px;
+      margin-top: 0;
+      border-radius: 50%;
+      height: 8px;
+      width: 8px;
+      background-color: $color-secondary;
+      transform: rotate(0) translateY(-50%);
+      left: 3px;
     }
   }
 
